kubernetes/analytics-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: analytics-service
  labels:
    app: analytics-service
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
        tier: backend
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
        - name: analytics-service
          image: 901918119201.dkr.ecr.us-east-1.amazonaws.com/tech-challenge/analytics-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8005
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
